--- a/views/private.hbs
+++ b/views/private.hbs
@@ -1,6 +1,6 @@
 Private page
 {{#if user}}
   <div>
-    <a href="/">Index</a>
+    <a href="/">Jules, you logged in with facebook!</a>
   </div>
 {{/if}}
