--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -6,3 +6,14 @@ body {
 a {
   color: #00B7FF;
 }
+
+#facebookLogin {
+background-color: red;
+color: purple;
+text-align: center;
+text-decoration: none;
+border: 3px;
+border-radius: 25px;
+height: 30px;
+width: 100px;
+}
