--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -15,5 +15,5 @@
   </div>
 </form>
 <div>
-<a href="/auth/facebook">Login With Facebook</a>
+<button id="facebookLogin"><a href="/auth/facebook">Login With Facebook</a></button>
 </div>
