--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,4 +5,14 @@ body {
 a {
   color: #00B7FF; }
 
+#facebookLogin {
+  background-color: red;
+  color: purple;
+  text-align: center;
+  text-decoration: none;
+  border: 3px;
+  border-radius: 25px;
+  height: 30px;
+  width: 100px; }
+
 /*# sourceMappingURL=style.css.map */
